--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,11 +3,26 @@ version: 2.1
 # Use a package of configuration called an orb.
 orbs:
   # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
+  cypress: cypress-io/cypress@1
 # Orchestrate or schedule a set of jobs
 workflows:
-  # Name the workflow "welcome"
-  welcome:
+  # Name the workflow 
+  build:
     # Run the welcome/run job in its own container
     jobs:
-      - welcome/run
+      - cypress/run:
+          name: 'end-to-end tests'
+
+      #       # install dependencies first (on 1 machine)
+      # - cypress/install
+      # # now run tests
+      # - cypress/run:
+      #     # give this job a custom name for clarity
+      #     name: 'end-to-end tests'
+      #     requires:
+      #       # use previously installed dependencies
+      #       # to avoid installing them on each machine running tests
+      #       - cypress/install
+      #     # record: true # record results to Cypress Dashboard
+      #     parallel: true # run tests in parallel
+      #     parallelism: 2 # use 3 CircleCI machines
