--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,9 @@ workflows:
           name: 'end-to-end tests'
 
       #       # install dependencies first (on 1 machine)
-      # - cypress/install
+       - cypress/install
       # # now run tests
+      - run: npm run record
       # - cypress/run:
       #     # give this job a custom name for clarity
       #     name: 'end-to-end tests'
