--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ version: 2.1
 orbs:
   # Declare a dependency on the welcome-orb
   cypress: cypress-io/cypress@1
+  node: circleci/node@4.5.1
 # Orchestrate or schedule a set of jobs
 workflows:
   # Name the workflow 
@@ -12,11 +13,11 @@ workflows:
     jobs:
       - cypress/run:
           name: 'end-to-end tests'
+          run-command: npm run record 
 
       #       # install dependencies first (on 1 machine)
       # - cypress/install
       # # now run tests
-      - run: npm run record
       # - cypress/run:
       #     # give this job a custom name for clarity
       #     name: 'end-to-end tests'
