--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,6 @@ version: 2.1
 orbs:
   # Declare a dependency on the welcome-orb
   cypress: cypress-io/cypress@1
-  node: circleci/node@4.5.1
 # Orchestrate or schedule a set of jobs
 workflows:
   # Name the workflow 
@@ -13,7 +12,7 @@ workflows:
     jobs:
       - cypress/run:
           name: 'end-to-end tests'
-          command: npm run record 
+          command: npx cypress run --record --key dcbe6b9e-f4b3-418e-8733-c46eca441060 --headless --browser chrome 
           record: true
           parallel: true
           parallelism: 4
