--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ workflows:
     jobs:
       - cypress/run:
           name: 'end-to-end tests'
+          command: npm install
           record: true
           parallel: true
           parallelism: 4
