--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ workflows:
       - cypress/run:
           name: 'end-to-end tests'
           command: npm install
+          command: npm run record
           record: true
           parallel: true
           parallelism: 4
