--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,7 @@ workflows:
     jobs:
       - cypress/run:
           name: 'end-to-end tests'
-          command: npm install
-          run: npx cypress run --record --key dcbe6b9e-f4b3-418e-8733-c46eca441060 --headless --browser chrome
+          command: npm install & npm run
           record: true
           parallel: true
           parallelism: 4
