--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ workflows:
     jobs:
       - cypress/run:
           name: 'end-to-end tests'
-          command: npm install & npm run
+          command: npm install & npm run record
           record: true
           parallel: true
           parallelism: 4
