--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,15 +12,8 @@ workflows:
     jobs:
       - cypress/run:
           name: 'end-to-end tests'
-          command: npm install & npm run record
-          record: true
-          parallel: true
-          parallelism: 4
-          group: 4 machines
-          store_artifacts: true
-          post-steps:
-            - store_test_results:
-                path: cypress/results
+          command: npm install
+
 
       #       # install dependencies first (on 1 machine)
       # - cypress/install
