--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,13 +10,9 @@ workflows:
   build:
     # Run the welcome/run job in its own container
     jobs:
-      - cypress/run:
-          name: 'end-to-end tests'
+      - cypress/install:
+          name: 'Install Dependecies'
           command: npm install
-
-
-      #       # install dependencies first (on 1 machine)
-      # - cypress/install
       # # now run tests
       # - cypress/run:
       #     # give this job a custom name for clarity
