--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,13 +18,14 @@ workflows:
       #       # install dependencies first (on 1 machine)
       # - cypress/install
       # # now run tests
-      # - cypress/run:
+       - cypress/run:
       #     # give this job a custom name for clarity
-      #     name: 'end-to-end tests'
+           name: 'end-to-end tests'
+           command: npm run test
       #     requires:
       #       # use previously installed dependencies
       #       # to avoid installing them on each machine running tests
       #       - cypress/install
       #     # record: true # record results to Cypress Dashboard
-      #     parallel: true # run tests in parallel
-      #     parallelism: 2 # use 3 CircleCI machines
+           parallel: true # run tests in parallel
+           parallelism: 2 # use 3 CircleCI machines
