--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ workflows:
       #       # install dependencies first (on 1 machine)
       # - cypress/install
       # # now run tests
-       - cypress/run:
+       - cypress/run
       #     # give this job a custom name for clarity
            name: 'end-to-end tests'
            command: npm run test
