--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,18 +10,26 @@ workflows:
   build:
     # Run the welcome/run job in its own container
     jobs:
-      - cypress/run:
+      - cypress/install:
           name: 'Install'
           command: npm install
+      - cypress/run:
+          name: 'end-to-end tests'
+          command: npm run test
+          record: true
+          parallel: true
+          parallelism: 2
+          group: 2 machines
+          # post-steps:
+          #   - store_artifacts:
+          #       path: mochawesome-report
 
 
       #       # install dependencies first (on 1 machine)
       # - cypress/install
       # # now run tests
-       - cypress/run
+      #  - cypress/run
       #     # give this job a custom name for clarity
-           name: 'end-to-end tests'
-           command: npm run test
       #     requires:
       #       # use previously installed dependencies
       #       # to avoid installing them on each machine running tests
