--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,19 +12,20 @@ workflows:
     jobs:
       - cypress/install
       - cypress/run:
+          command: npm run test
           name: 4 machines
           requires:
             - cypress/install
-          record: true
+          # record: true
           parallel: true
           parallelism: 4
           group: 4 machines
       - cypress/run:
+          command: npm run test
           name: Chrome
           requires:
             - cypress/install
-          executor: cypress/browsers-chrome69
-          record: true
+          # record: true
           parallel: true
           parallelism: 2
           group: smoke tests
