--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ workflows:
           # parallelism: 4
           # group: 4 machines
       - cypress/run:
-          command: cypress run --record --key dcbe6b9e-f4b3-418e-8733-c46eca441060 --browser chrome
+          command: cypress run chrome
           name: Chrome
           requires:
             - cypress/install
