--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ workflows:
           # parallelism: 4
           # group: 4 machines
       - cypress/run:
-          command: npm run chrome
+          command: npm run record
           name: Chrome
           requires:
             - cypress/install
