--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "cypress run",
-    "record": "cypress run --record --key dcbe6b9e-f4b3-418e-8733-c46eca441060 --headless --browser chrome",
+    "record": "cypress run --record --key dcbe6b9e-f4b3-418e-8733-c46eca441060 --headless",
     "chrome": "cypress run --record --key dcbe6b9e-f4b3-418e-8733-c46eca441060 --browser chrome",
     "firefox": "cypress run --record --key dcbe6b9e-f4b3-418e-8733-c46eca441060 --browser firefox"
   },
